# gjs-hunspell

./: .gitignore  COPYING  Makefile.am  README  autogen.sh  configure.ac
gjs-hunspell/: hunspell.cxx
src/: hunspell.cxx  hunspell_test.js
